test/spec_vectors/ref/fail/module_3.wat
(module (global $global-invalid (ref null 1) (ref.null 1)))